--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.22",
     "next": "16.0.3",
+    "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -20,7 +22,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
-    "tailwindcss": "^4",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
 }
