--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.81.1",
     "autoprefixer": "^10.4.22",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "postcss": "^8.5.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
