--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^16.0.7",
     "postcss": "^8.5.6",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
