--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "postcss": "^8.5.6",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "resend": "^6.8.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
